--- a/datacake-nodes/datacake-device-input.html
+++ b/datacake-nodes/datacake-device-input.html
@@ -224,7 +224,7 @@
         },
         inputs: 0,
         outputs: 1,
-        icon: "datacake.png",
+        icon: "datacake.svg",
         label: function() {
             return this.name || "Datacake: Device Input";
         },
