--- a/datacake-nodes/datacake-device-output.html
+++ b/datacake-nodes/datacake-device-output.html
@@ -224,7 +224,7 @@
         },
         inputs: 1,
         outputs: 0,
-        icon: "datacake.png",
+        icon: "datacake.svg",
         label: function() {
             return this.name || "Datacake: Device Output";
         },
