feld auswählen = + = all fields

--- a/datacake-nodes/datacake-device-output.html
+++ b/datacake-nodes/datacake-device-output.html
@@ -181,7 +181,7 @@
                     if (result.length !== 0) {
                         $('#node-input-field_id_select').append(
                             $('<option>', {
-                                value: false,
+                                value: '+',
                                 text: "-- Feld auswählen --",
                                 selected: true,
                             })
